fix spacing in subtitle

--- a/style.css
+++ b/style.css
@@ -149,7 +149,7 @@ header {
 .subtitle {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-evenly;
     width: 100%;
 }
 
